[package]
name = "dua-cli"
version = "2.3.2"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.*", "*.md", "LICENSE"]
repository = "https://github.com/Byron/dua-cli"
readme = "README.md"
description = "A tool to conveniently learn about the disk usage of directories, fast!"
license = "MIT"

[dependencies]
failure = "0.1.1"
failure-tools = "4.0.2"
structopt = "0.3"
jwalk = "0.4.0"
byte-unit = "3"
termion = { version = "1.5.2", optional = true }
crossterm = { version = "0.16", optional = true }
atty = "0.2.11"
tui = { version = "0.8.0", default-features = false }
petgraph = "0.5"
itertools = "0.8.0"
open = "1.2.2"
log = "0.4.6"
tui-react = { path = "./tui-react", version = "0.2", default-features = false }
num_cpus = "1.10.0"
unicode-segmentation = "1.3.0"
filesize = "0.1.0"
ansi_term = "0.12.1"

[[bin]]
name="dua"
path="src/main.rs"

[lib]
name="dua"

[profile.release]
panic = 'unwind'
incremental = false
overflow-checks = false
lto = true

[dev-dependencies]
pretty_assertions = "0.6.1"

[workspace]
members = ["tui-react"]

[features]
default = ["termion", "tui/termion", "tui-react/termion"]
use-termion = ["termion", "tui/termion", "tui-react/termion"]
use-crossterm = ["crossterm", "tui/crossterm", "tui-react/crossterm"]
use-curses = ["tui/curses", "tui-react/curses"]
use-rustbox = ["tui/rustbox", "tui-react/rustbox"]
