[package]
name = "tui-react"
version = "0.2.1"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
repository = "https://github.com/Byron/dua-cli"
description = "TUI widgets using a react-like paradigm, allowing mutable component state and render properties."
readme = "README.md"
license = "MIT"

[dependencies]
tui = {version = "0.8.0", default-features = false }
log = "0.4.6"

[features]
default = ["tui/termion"]
crossterm = ["tui/crossterm"]
curses = ["tui/easycurses", "tui/pancurses"]
termion = ["tui/termion"]
rustbox = ["tui/rustbox"]
